Fix alignment

--- a/template/static/styles/site.pdftron.css
+++ b/template/static/styles/site.pdftron.css
@@ -3879,7 +3879,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .input-group-btn {
   width: 1%;
   white-space: nowrap;
-  vertical-align: middle;
+  vertical-align: top;
 }
 .input-group-addon {
   padding: 8px 12px;
